# zcv

./: .gitignore  .release-please-manifest.json  404.html  CHANGELOG.md  Cargo.toml  README.md  Rocket.toml  flutter_rust_bridge.yaml  index.html  install.md  install.sh  node-setup.sh  package.json  pnpm-lock.yaml  pubspec.yaml  pyproject.toml  release-please-config.json  todo.md  zcv-setup.yml  zcv.toml
.github/workflows/: build-android.yml  build-ci.yml  build-cluster.yml  build-docker.yml  build-e2e.yml  build-ios.yml  build-large-cluster.yml  build-linux-arm.yml  build-linux.yml  build-mac.yml  build-setup-docker.yml  build-voter.yml  build-win.yml  build.yml  release-please.yml  release-plz.yml  vuepress.yml
android/app/: build.gradle.kts  zcv-keystore.jks.enc
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/cc/methyl/zcv/: MainActivity.kt
assets/: 404.html--VVpFTHU.js  404.html-2ugJV_0I.js  404.html-5cy_oA2A.js  404.html-B-biXZZO.js  404.html-B0SOoo8N.js  404.html-B1MpP75b.js  404.html-B4O16iMl.js  404.html-B7fpgPTY.js  404.html-B8xPQ2B2.js  404.html-B9oyMZC8.js  404.html-BBqveZHW.js  404.html-BDGoVzl5.js  404.html-BDi7NcBT.js  404.html-BHPN_e1D.js  404.html-BHpb6HXC.js  404.html-BIWriNJa.js  404.html-BIbf3XER.js  404.html-BJbiCxDk.js  404.html-BKJbQb4g.js  404.html-BLBbRWGO.js  404.html-Bbf8AfqZ.js  404.html-BmfMYBLU.js  404.html-Bu4sKS46.js  404.html-BuKGmwth.js  404.html-BxVeofEX.js  404.html-C51cFRa9.js  404.html-C5LBDxnM.js  404.html-C7D2CIsD.js  404.html-C8H6U9ZC.js  404.html-C9OFz5sf.js  404.html-CBirFn95.js  404.html-CBoWm_zA.js  404.html-CCKNkpXr.js  404.html-CFNjsiXT.js  404.html-CJD9NaFP.js  404.html-CKa3g5Eg.js  404.html-CL_DxjQZ.js  404.html-CLkZ55Os.js  404.html-CNbKZX2c.js  404.html-COVpWwyh.js  (+5311 more)
docs/: README.md  schema.yml
docs/.vuepress/: config.js
docs/how-to/: authority.md  creator.md  format.md  overview.md  voter.md
how-to/: authority.html  creator.html  format.html  overview.html  results.html  voter.html
integration_test/: simple_test.dart
ios/: export_options.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart  store.dart  store.g.dart  zcv.dart
lib/pages/: home.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart  vote.dart
lib/src/rust/api/: init.dart  prop.dart  rpc.dart  simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: appdata.xml
linux/packaging/appimage/: make_config.yaml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
misc/: app.json  apple.distrib.p12.enc  gcp.json.enc  ios.mobileprovision.enc  macos.cert.enc
rust/: Cargo.toml
rust/src/: app.rs  db.rs  frb_generated.rs  lib.rs
rust/src/api/: init.rs  mod.rs  prop.rs  rpc.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: zcvlib.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: zcvlib.podspec
rust_builder/windows/: CMakeLists.txt
setup/: CHANGELOG.md  Cargo.toml
setup/docker/: Dockerfile  alpine.dockerfile  build.dockerfile  ubuntu.dockerfile
setup/src/: config.rs  main.rs
tests/: HOWTO.md  ballot1.hex  ballot1.json  ballot2.hex  ballot2.json  count.sh  nu7.yml  submit_ballots.sh  submit_election.sh  submit_lock.sh  submit_nu7.sh  test_election-pub.json  test_election.yml  vote_alot.sh  voter.graphql  voter.sh
tests/pir/: package.json  root  tier0
tests/pir/params/: tier1  tier2
tests/scale/: package-lock.json  package.json  tsconfig.json
tests/scale/src/: index.ts
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
zcv/: __init__.py  cli.py  config.py  logging.py  process_manager.py  systemd.py  watchdog.py
zcv/commands/: __init__.py  download.py  election.py  node_config.py  reset.py  service.py  validator.py
zcvlib/: CHANGELOG.md  Cargo.toml  build.rs
zcvlib/protos/: vote.proto
zcvlib/src/: balance.rs  ballot.rs  cash.z.vote.sdk.rpc.rs  cash.z.wallet.sdk.rpc.rs  cometapp.rs  context.rs  counter-cli.rs  creator-cli.rs  db.rs  election.rs  error.rs  frb_generated.rs  lib.rs  lwd.rs  pir.rs  pod.rs  server.rs  tests.rs  vote.rs  voter-cli.rs
zcvlib/src/api/: init.rs  mod.rs  simple.rs
zcvlib/src/server/: rpc.rs
zcvlib/src/voter/: mod.rs  mutation.rs  query.rs  sync.rs
