[patch.crates-io.orchard]
#path = "./orchard"
git = "https://github.com/hhanh00/orchard.git"
rev = "047ba570e4282dab7f70a51f84d6e8a58f7fee74"

[workspace]
exclude = ["orchard"]
members = ["zcvlib", "setup"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
bech32 = "0.11"
bincode = "2.0"
bip39 = "2.2"
blake2b_simd = "1.0"
byteorder = "1.5"
ff = "0.13"
figment = {version = "0.10", features = ["toml", "yaml"]}
futures = "0.3"
halo2_proofs = "0.3"
hex-literal = "1.1"
incrementalmerkletree = "0.8"
log = "0.4"
parking_lot = "0.12"
pasta_curves = "0.5"
prost = "0.14"
rand = "0.8"
rand_core = "0.6"
redact = {version = "0.1", features = ["serde"]}
reqwest = {version = "0.12", features = ["json"]}
serde_json = "1.0"
serde_with = {version = "3.17", features = ["hex"]}
serial_test = "3.2.0"
tendermint = "0.40.1"
tendermint-abci = {version = "0.40.1", features = ["client"]}
tendermint-proto = "0.40.1"
thiserror = "2"
tokio-stream = "0.1"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
zcash_address = "0.10"
zcash_encoding = "0.3"
zcash_note_encryption = "0.4"
zcash_protocol = "0.7"
zip32 = "0.2.1"

bigdecimal = "0.4"
chrono = "0.4"
clap = {version = "4.5", features = ["derive"]}
juniper = {version = "0.17", features = ["bigdecimal", "chrono"]}
juniper_graphql_ws = "0.5"
juniper_warp = {version = "0.9", features = ["subscriptions"]}
warp = {version = "0.4", features = ["server", "websocket"]}

[workspace.dependencies.zcash-trees]
git = "https://github.com/hhanh00/zkool2.git"
rev = "1ce058dafbf4fb5059c7bc735aba555785e1d603"

[workspace.dependencies.pir-client]
git = "https://github.com/hhanh00/vote-nullifier-pir"

[workspace.dependencies.hex]
features = ["serde"]
version = "0.4"

[workspace.dependencies.orchard]
features = ["vote"]
version = "0.11"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0"

[workspace.dependencies.sqlx]
features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
]
version = "0.8"

[workspace.dependencies.tokio]
features = [
  "rt-multi-thread",
  "macros",
]
version = "1.48"

[workspace.dependencies.tonic]
features = [
  "tls-ring",
  "tls-webpki-roots",
]
version = "0.14"
