[project]
name = "zcv-cli"
version = "0.2.0"
description = "ZCV (Zcash Coin Voting) node management CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12",
    "requests>=2.31",
    "rich>=13.7",
]

[project.scripts]
zcv = "zcv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zcv"]
