[package]
edition = "2021"
name = "lfrb"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
orchard.workspace = true
zcash_address.workspace = true
zcash_encoding.workspace = true
zcash_keys.workspace = true
zcash_note_encryption.workspace = true
zcash_primitives.workspace = true
zcash_proofs.workspace = true
zcash_protocol.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
rustls.workspace = true

flutter_rust_bridge = "=2.11.1"

zcvlib = { path = "../zcvlib" }

[build-dependencies]
tonic-prost-build = "0.14.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
