[package]
edition = "2024"
name = "zcvlib"
version = "0.2.0"
license = "MIT"
description = "A rust library to coin weighted voting for Zcash"

[[bin]]
name = "vote-cometbft"
path = "src/cometapp.rs"

[dependencies]
orchard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bip39 = { workspace = true }
bech32 = { workspace = true }
ff = { workspace = true }
hex = { workspace = true }
zcash_protocol = { workspace = true }
zcash_note_encryption = { workspace = true }
pasta_curves = { workspace = true }
zip32 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
blake2b_simd = { workspace = true }
rand_core = { workspace = true }
rocket_cors = { workspace = true }
hex-literal = { workspace = true }

tendermint-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
rocket = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
