[package]
edition = "2024"
name = "zcvlib"
version = "0.3.0"
license = "MIT"
description = "A rust library to coin weighted voting for Zcash"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "vote-cometbft"
path = "src/cometapp.rs"

[[bin]]
name = "voter"
path = "src/voter-cli.rs"

[dependencies]
flutter_rust_bridge = "=2.11.1"

orchard = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bip39 = { workspace = true }
bech32 = { workspace = true }
ff = { workspace = true }
hex = { workspace = true }
zcash_protocol = { workspace = true }
zcash_note_encryption = { workspace = true }
pasta_curves = { workspace = true }
zip32 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
blake2b_simd = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
hex-literal = { workspace = true }

tendermint-abci = { workspace = true }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

juniper = { workspace = true }
juniper_warp = { workspace = true }
juniper_graphql_ws = { workspace = true }
warp = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
